[gd_scene load_steps=3 format=3 uid="uid://ywkoygcb1l13"]

[ext_resource type="Script" uid="uid://b6eale7p0ordg" path="res://game.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://bif80y6577k0w" path="res://blood_system.tscn" id="2_e2o6t"]

[node name="Game" type="Node2D"]
script = ExtResource("1_feb5d")

[node name="BloodSystem" parent="." instance=ExtResource("2_e2o6t")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 100.0
offset_bottom = 23.0
text = "Score:"

[node name="NextButton" type="Button" parent="CanvasLayer/UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 265.0
offset_top = 437.0
offset_right = 408.0
offset_bottom = 473.0
text = "Next Heartbeat"
